--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage":"https://devsagarkhatri.github.io/stone-paper-scissors/",
+  "start_url": "https://devsagarkhatri.github.io/stone-paper-scissors/",
   "name": "stone-paper-scissors",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +8,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -14,6 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
