--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage":"https://devsagarkhatri.github.io/sps",
-  "start_url": "https://devsagarkhatri.github.io/sps",
+  "homepage":"https://devsagarkhatri.github.io/stone-paper-scissors/",
+  "start_url": "https://devsagarkhatri.github.io/stone-paper-scissors/",
   "name": "stone-paper-scissors",
   "version": "0.1.0",
   "private": true,
